--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         </section>
         
     </div>
-    <section class="contact" id="contact">
+    <section class="contact" id="contact
+    ">
         <form action="#" class="contact-form">
             <h2 class="title"> Pour nous <strong>contacter</strong></h2>
             <input type="text" name="name" id="name " placeholder="Nom" >
