--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 <body>
     <div class="vp-container">
         <header>
-            <h2 class="vp-logo">
-                <i class="fa-solid fa-crown"></i>
-                <a href="#">AfD</a>
-            </h2>
+            <div class="vp-logo">
+                <img src="imgs/4ff871dd-cf51-4503-b077-6eb81b3fad45-1024x1024.webp" alt="">
+            </div>
             <ul>
                 <li><a href="#offer">Nos offres</a></li>
                 <li><a href="#equipe" >Notre equipe</a></li>
